Feature: empty worlds for arenas (/ch world) and arenas that create their own
A map can now live in its own world instead of somewhere far out in the
overworld.

- VoidWorlds creates an empty world (a generator that produces nothing, a
  small platform at spawn, calm daytime weather) with no other plugin needed,
  and marks its folder with a small file so the plugin recognises it at the
  next start. World names are limited to letters, digits, - and _ so they
  cannot reach outside the server folder, and a folder that is not one of
  ours is never loaded with our generator.
- An arena file with "create-world: void" makes the plugin create that world
  if it is missing, and any void world it made earlier is loaded again before
  its arenas are read, so a map placed in an empty world survives restarts.
- /ch world create <name>, tp <name> and list (copperheist.admin.arena).
- Tests cover the name validation, including path-like names.